# swagger.json
@@ -6905,14 +6905,6 @@
           "password": {
             "type": "string",
             "nullable": true
-          },
-          "roles": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "nullable": true,
-            "readOnly": true
           }
         },
         "additionalProperties": false
@@ -7415,14 +7407,6 @@
           "id": {
             "type": "string",
             "format": "uuid"
-          },
-          "roles": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "nullable": true,
-            "readOnly": true
           }
         },
         "additionalProperties": false
@@ -8229,6 +8213,14 @@
             "type": "string",
             "nullable": true
           },
+          "userName": {
+            "type": "string",
+            "nullable": true
+          },
+          "fullName": {
+            "type": "string",
+            "nullable": true
+          },
           "likesCount": {
             "type": "integer",
             "format": "int32"
@@ -8236,6 +8228,9 @@
           "commentsCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "isLikedByUser": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -10284,14 +10279,6 @@
           "bio": {
             "type": "string",
             "nullable": true
-          },
-          "roles": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "nullable": true,
-            "readOnly": true
           }
         },
         "additionalProperties": false
